--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,11 +7,12 @@
   <% end  %>
   <h3>Some of our users</h3>
   <% @users.each do |user|  %>
-    <%= user.name  %>
+      <li><a href="/users/<%= user.id %>"><%= user.name  %></a></li>
   <% end  %>
 <% else %>
   <h1>Welcome to Chirper</h1>
   <h3>Please sign in or create a new user</h3>
 <% end  %>
+
 
 </div>
