--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,8 +1,16 @@
+body {
+    background-image: url("http://imgur.com/aQyMEMV.png");
+    background-color: black;
+    background-size: 100%;
+
+}
+
+
 .container {
   margin: 20px auto;
   width: 800px;
   padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
+  text-align: center;
 }
 
 .container h1 {
@@ -10,10 +18,16 @@
 
 }
 
+.logo {
+  width: 100px;
+  height: 56px;
+}
+
 nav {
   width: 100%;
-  height: 40px;
+  height: 60px;
   font-weight: bold;
+  background: black;
 }
 
 nav .brand, nav .brand a {
