added chirp, rechir and followers

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -79,3 +79,9 @@ form.quirks {
   background:none;
   font-weight: :bold;
 }
+
+#profile input {
+  border:none;
+  background:none;
+  font-weight: :bold;
+}
