--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,7 +13,7 @@
 <body>
 
   <nav>
-    <div class="brand"><a href="/users/<%= current_user %>">Profile</a>
+    <div class="brand"><a href="/users/<%= current_user.id %>">Profile <%= current_user.name %></a>
     </div>
     <ul>
       <% if current_user %>
