--- a/app/views/sign_in.erb
+++ b/app/views/sign_in.erb
@@ -7,9 +7,9 @@
 
   <form id="sign-in" method="post" action="/sessions">
     <label class="label" for="email">Email</label>
-    <input type="email" name="email" placeholder="e.g., me@example.com" value="<%= @email %>"><br>
+    <input type="email" name="email" placeholder="e.g., me@example.com" value="<%= @email %>" class="bar"><br>
     <label class="label" for="password">Password</label>
-    <input type="password" name="password" placeholder="6 or more characters">
+    <input type="password" name="password" placeholder="6 or more characters"  class="bar">
     <br>
     <div class="submit"><input type="submit" value="Sign In"></div>
   </form>
