--- a/public/css/application.css
+++ b/public/css/application.css
@@ -87,9 +87,7 @@ form.quirks {
 
 .label {
   font-weight: bold;
-  float: left;
   text-align: right;
-  margin-right: 20px;
   width: 200px;
 }
 
@@ -97,4 +95,12 @@ form.quirks {
   border:none;
   background:none;
   font-weight: :bold;
+}
+
+#sign-in input {
+  display: inline-block;
+}
+input {
+  border-radius: 8px;
+  display: inline-block;
 }
