--- a/app/views/sign_in.erb
+++ b/app/views/sign_in.erb
@@ -11,7 +11,7 @@
     <label class="label" for="password">Password</label>
     <input type="password" name="password" placeholder="6 or more characters"  class="bar">
     <br>
-    <div class="submit"><input type="submit" value="Sign In"></div>
+    <div class="submit"><input type="submit" value="Sign In" class="submit"></div>
   </form>
 
 </div>
