--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,7 +14,7 @@
 
   <nav>
     <div class="brand">
-      <a href="/"><img src="http://i.imgur.com/MhPi5vJ.png" class="logo"/> Chirper</a>
+      <!-- <a href="/"><img src="http://i.imgur.com/E0ujJjT.png" class="logo"/></a> -->
     </div>
     <ul>
       <% if current_user %>
