--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("http://imgur.com/UFkdTft.png");
+    background-image: url("http://imgur.com/tY34hpM.png");
     background-color: black;
     background-size: 100%;
     color: white;
@@ -25,15 +25,12 @@ body {
 .logo {
   width: 100px;
   height: 56px;
-  padding-bottom: 5%;
-  display: inline;
 }
 
 nav {
   width: 100%;
   height: 60px;
   font-weight: bold;
-  background: black;
   display: inline-block;
 }
 
@@ -55,6 +52,7 @@ nav .brand, nav .brand a, nav .brand li {
 nav .brand a {
   display: inline-block;
   color: #89d046;
+  margin-top: -10%;
 }
 nav ul {
   display: inline-block;
