--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,17 +1,19 @@
 <div class="container">
-<% if @session %>
-  <h3>Here are the latest Chirps:</h3>
-  <% @chirps.each do |chirp|  %>
-    <%= chirp.content  %>
+  <div class="index"
+  <% if @session %>
+    <h3>Here are the latest Chirps:</h3>
+    <% @chirps.each do |chirp|  %>
+      <%= chirp.content  %>
+    <% end  %>
+    <h3>Some of our users</h3>
+    <% @users.each do |user|  %>
+        <li><a href="/users/<%= user.id %>"><%= user.name  %></a></li>
+    <% end  %>
+  <% else %>
+    <h1>Welcome to Chirper</h1>
+    <h3>Please sign in or create a new user</h3>
   <% end  %>
-  <h3>Some of our users</h3>
-  <% @users.each do |user|  %>
-      <li><a href="/users/<%= user.id %>"><%= user.name  %></a></li>
-  <% end  %>
-<% else %>
-  <h1>Welcome to Chirper</h1>
-  <h3>Please sign in or create a new user</h3>
-<% end  %>
+</div>
 
 
 </div>
